--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -14,7 +14,7 @@
 }
 
 .title {
-  font-size: 1.6em;
+  font-size: 2em;
 }
 
 .holder {
@@ -26,7 +26,7 @@
 
 .spanleft {
   width: 50px;
-  height: 20px;
+  height: 30px;
   border-bottom: 8px double #009799;
   border-radius: 0 10px;
   margin-top: 20px;
@@ -35,7 +35,7 @@
 
 .spanright {
   width: 50px;
-  height: 20px;
+  height: 30px;
   border-bottom: 8px double #009799;
   border-radius: 10px 0;
   margin-top: 20px;
