--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,8 @@ body {
   text-align: center;
   color: #00C3C6;
   box-sizing: border-box;
-  font-size: 1em;
+  font-size: 16px;
+  line-height: 1.8;
   min-height: 100%;
   min-width: 100%;
 }
